# siaod-1

./: CMakeLists.txt  DynamicArray.h  StaticArray.h  VectorArray.h  main.cpp
prob-1/: CMakeLists.txt  DynamicArray.h  IArray.h  StaticArray.h  main.cpp
prob-10/: CMakeLists.txt  main.cpp
prob-10/answers/: bor.cpp  question-19.cpp  question-20.cpp  question-21.cpp
prob-10/searches/: CMakeLists.txt  KMPSearch.cpp  KMPSearch.h  LinearSearch.cpp  LinearSearch.h
prob-10/utils/: CMakeLists.txt  utils.cpp  utils.h
prob-2/: CMakeLists.txt  Circle.h  Vec2.h  main.cpp
prob-2-1/: CMakeLists.txt  Vec2.h  main.cpp
prob-2/matrix/: DynamicMatrix.cpp  DynamicMatrix.h  IBaseMatrix.cpp  IBaseMatrix.h  StaticMatrix.cpp  StaticMatrix.h  VectorMatrix.cpp  VectorMatrix.h
prob-3/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
prob-4/: CMakeLists.txt  DynamicArray.h  ExamTable.cpp  ExamTable.h  main.cpp
prob-5/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  main.cpp
prob-6/: CMakeLists.txt  LinkedList.h  main.cpp
prob-7/: CMakeLists.txt  DynamicArray.h  LinkedList.h  Stack.h  StaticArray.h  main.cpp
prob-8/: CMakeLists.txt  main.cpp  sorts.cpp  sorts.h  utils.h
prob-9/: CMakeLists.txt  DataBase.cpp  DataBase.h  main.cpp  utils.cpp  utils.h
