cmake_minimum_required(VERSION 3.24)
project(siaod)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(prob-1)
add_subdirectory(prob-2)
add_subdirectory(prob-3)
add_subdirectory(prob-4)
add_subdirectory(prob-6)
add_subdirectory(prob-5)
add_subdirectory(prob-7)
add_subdirectory(prob-8)
add_subdirectory(prob-9)